--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,61 @@
-pyTelegramBotAPI
-phonenumbers
-countryflag
-requests
+# 🔥 ULTIMATE ENTERPRISE PVA BOT v4.0 - requirements.txt
+# =================================================================
+# 🤖 WORLD'S MOST ADVANCED SMS PVA FRAMEWORK (2026 Edition)
+# 25+ Services | ML Detection | Stealth C2 | TOR Mesh | Zero-Trust
+# =================================================================
+
+pyTelegramBotAPI==4.22.3
+aiogram==3.13.1
+telethon==1.37.0
+phonenumbers==8.15.1
+countryflag==1.0.0
+pycountry==22.12.26
+requests==2.31.0
+aiohttp==3.10.11
+httpx==0.27.2
+cloudscraper==1.2.72
+undetected-chromedriver==3.5.5
+selenium==4.25.0
+requests[socks]==2.31.0
+aiohttp-socks==0.8.5
+proxy-py==2.4.5
+torrequest==0.2.2
+stem==1.8.3
+fake-useragent==1.5.1
+cryptography==43.0.3
+PyJWT==2.9.0
+argon2-cffi==23.1.0
+scikit-learn==1.5.2
+numpy==2.1.1
+pandas==2.2.3
+xgboost==2.1.1
+tensorflow==2.17.0
+torch==2.4.1
+sqlite3-utils==3.44
+aiosqlite==0.20.0
+SQLAlchemy==2.0.35
+redis==5.2.1
+celery==5.4.0
+beautifulsoup4==4.12.3
+lxml==5.3.0
+playwright==1.47.0
+pyppeteer==2.0.0
+asyncio-throttle==1.0.2
+trio==0.25.2
+uvloop==0.20.0
+pytz==2024.2
+geopy==2.4.1
+structlog==24.4.0
+sentry-sdk==2.13.0
+prometheus-client==0.20.0
+streamlit==1.38.0
+dash==2.18.1
+plotly==5.24.1
+twilio==9.3.5
+orjson==3.10.7
+msgpack==1.1.0
+ujson==5.10.0
+cfscrape==2.1.1
+flask==3.0.3
+fastapi==0.115.0
+uvicorn==0.30.6
